--- a/team2-demo-optimized/docker/Dockerfile.backend
+++ b/team2-demo-optimized/docker/Dockerfile.backend
@@ -1,5 +1,5 @@
 # Multi-stage build for Spring Boot backend
-FROM maven:3.9-eclipse-temurin-17-alpine AS build
+FROM maven:3.9.12-eclipse-temurin-17 AS build
 WORKDIR /build
 
 # Copy pom.xml and download dependencies (cached layer)
@@ -11,11 +11,11 @@ COPY backend/src ./src
 RUN mvn clean package -DskipTests -B
 
 # Runtime stage
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:17.0.17_10-jre
 WORKDIR /app
 
 # Create non-root user
-RUN addgroup -S spring && adduser -S spring -G spring
+RUN groupadd -r spring && useradd -r -g spring spring
 USER spring:spring
 
 # Copy jar from build stage
