--- a/team2-demo-optimized/docker/Dockerfile.gateway
+++ b/team2-demo-optimized/docker/Dockerfile.gateway
@@ -4,7 +4,7 @@ WORKDIR /build
 
 # Install dependencies (cached layer)
 COPY frontend/package*.json ./
-RUN npm ci --legacy-peer-deps
+RUN npm install --legacy-peer-deps
 
 # Build frontend
 COPY frontend/ .
