--- a/team2-demo-optimized/docker/Dockerfile.backend
+++ b/team2-demo-optimized/docker/Dockerfile.backend
@@ -14,12 +14,12 @@ RUN mvn clean package -DskipTests -B
 FROM eclipse-temurin:17.0.17_10-jre
 WORKDIR /app
 
-# Create non-root user
-RUN groupadd -r spring && useradd -r -g spring spring
-USER spring:spring
+# Use a non-conflicting numeric UID for Kubernetes compatibility
+# UID 65534 is reserved for 'nobody' on most systems
+USER 65534:65534
 
 # Copy jar from build stage
-COPY --from=build /build/target/app.jar app.jar
+COPY --chown=65534:65534 --from=build /build/target/app.jar app.jar
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
