--- a/team2-demo-optimized/k8s/base/gateway-deployment.yaml
+++ b/team2-demo-optimized/k8s/base/gateway-deployment.yaml
@@ -24,12 +24,15 @@ spec:
     spec:
       securityContext:
         runAsNonRoot: true
+        runAsUser: 101
+        runAsGroup: 101
+        fsGroup: 101
         seccompProfile:
           type: RuntimeDefault
       containers:
         - name: gateway
-          image: ${REGISTRY}/team2-gateway:${VERSION}
-          imagePullPolicy: Always
+          image: team2-gateway:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - name: http
               containerPort: 8080
