--- a/team2-demo-optimized/gateway/nginx.conf
+++ b/team2-demo-optimized/gateway/nginx.conf
@@ -1,7 +1,7 @@
-user nginx;
+# Non-root; pid in /tmp
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+pid /tmp/nginx.pid;
 
 events {
     worker_connections 1024;
@@ -24,6 +24,13 @@ http {
     types_hash_max_size 2048;
     client_max_body_size 10m;
 
+    # Temp paths in /tmp (writable)
+    client_body_temp_path /tmp/nginx_client_temp;
+    proxy_temp_path /tmp/nginx_proxy_temp;
+    fastcgi_temp_path /tmp/nginx_fastcgi_temp;
+    uwsgi_temp_path /tmp/nginx_uwsgi_temp;
+    scgi_temp_path /tmp/nginx_scgi_temp;
+
     gzip on;
     gzip_vary on;
     gzip_proxied any;
@@ -34,6 +41,7 @@ http {
     server {
         listen 8080;
         server_name _;
+        port_in_redirect off;
 
         root /usr/share/nginx/html;
         index index.html;
@@ -43,26 +51,9 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
 
-        # Backend API proxy
-        location /api/ {
-            proxy_pass http://backend-team2:8080/api/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            
-            # Timeouts
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-        }
-
-        # Frontend static files
-        location / {
+        # Frontend at /app1/
+        location /app1/ {
+            alias /usr/share/nginx/html/;
             try_files $uri $uri/ /index.html;
             
             # Cache static assets
@@ -72,7 +63,27 @@ http {
             }
         }
 
-        # Health check endpoint
+        # Redirect /app1 to /app1/
+        location = /app1 {
+            return 301 /app1/;
+        }
+
+        # Proxy API
+        location /api/ {
+            proxy_pass http://backend-team2:8080/api/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Fallback
+        location / {
+            return 404;
+        }
+
+        # Health check
         location /health {
             access_log off;
             return 200 "healthy\n";
