--- a/team2-demo-optimized/k8s/base/kustomization.yaml
+++ b/team2-demo-optimized/k8s/base/kustomization.yaml
@@ -7,6 +7,10 @@ resources:
   - namespace.yaml
   - backend-deployment.yaml
   - gateway-deployment.yaml
+  - frontend-route.yaml
+  - backend-route.yaml
+  - api-route.yaml
 
-commonLabels:
-  app.kubernetes.io/name: team2-demo
+labels:
+  - pairs:
+      app.kubernetes.io/name: team2-demo
