--- a/team2-demo-optimized/k8s/overlays/dev/gateway-service-patch.yaml
+++ b/team2-demo-optimized/k8s/overlays/dev/gateway-service-patch.yaml
@@ -3,9 +3,8 @@ kind: Service
 metadata:
   name: gateway-team2
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - name: http
       port: 8080
       targetPort: http
-      nodePort: 30080
