--- a/team2-demo-optimized/gateway/nginx.conf
+++ b/team2-demo-optimized/gateway/nginx.conf
@@ -1,6 +1,5 @@
-# Non-root; pid in /tmp
 worker_processes auto;
-error_log /var/log/nginx/error.log warn;
+error_log /dev/stderr warn;
 pid /tmp/nginx.pid;
 
 events {
@@ -15,7 +14,7 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/log/nginx/access.log main;
+    access_log /dev/stdout main;
 
     sendfile on;
     tcp_nopush on;
@@ -24,12 +23,8 @@ http {
     types_hash_max_size 2048;
     client_max_body_size 10m;
 
-    # Temp paths in /tmp (writable)
-    client_body_temp_path /tmp/nginx_client_temp;
-    proxy_temp_path /tmp/nginx_proxy_temp;
-    fastcgi_temp_path /tmp/nginx_fastcgi_temp;
-    uwsgi_temp_path /tmp/nginx_uwsgi_temp;
-    scgi_temp_path /tmp/nginx_scgi_temp;
+    client_body_temp_path /tmp/nginx/client_body;
+    proxy_temp_path /tmp/nginx/proxy;
 
     gzip on;
     gzip_vary on;
